# html5ever_normalizer

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: release.yml
python/html5ever_normalizer/: __init__.py
python/tests/: test_parser.py
scripts/: test.sh
src/: lib.rs
