[package]
name = "html5ever_normalizer"
version = "0.1.0"
edition = "2021"
description = "HTML5 Normalizer and Validator using Rust's html5ever"
license = "MIT"
repository = "https://github.com/yourusername/html5ever_normalizer"

[lib]
name = "html5ever_normalizer"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23.0", features = ["extension-module"] }
html5ever = "0.27"
markup5ever = "0.14"
markup5ever_rcdom = "0.3"
tendril = "0.4"
lazy_static = "1.5.0" 